# articles

./: .gitignore  index.html
Code Testing for Researchers/: assert.tex  automation.tex  complex.cc  main.tex  motivation.tex  static.c  static_analysis.tex  summary.tex  tdd.tex  testing_levels.tex  testing_methods.tex  unit_testing.tex
Introduction to Shell Scripting/: beamerthemeMedian16.sty  code_coverage.tex  coverage.c  frameworks.tex  main.tex  motivation.tex  nose_tests.py  overview.tex  static_analysis.tex  testing_methods.tex
MelbDjango/channels-heroku-cq/: index.html
MelbDjango/cluedo/: index.html
SwiftNavigation/interview/: index.html
SwiftNavigation/interview/anneal/: anneal.py  pyproject.toml
cuda_easy/: _thrust.tex  generic.tex  median.tex  thrust.tex
meg/: equations.tex
melinda/: parallax.tex
proc_slide/: base.js  channels-cq.html  channels-cq.pjs  helpers.js  history.js  lists.js  shell.txt  terminal.js  test-processing.pjs  test.html  testing.js  tween.js
proc_slide/qunit/: base.tests.html  base.tests.js  entity.tests.html  entity.tests.js  node.tests.html  node.tests.js  timeline.tests.html  timeline.tests.js
sc2012/tao_presentation/: gpu.tex  lightcone.tex  mpi.tex  sed.tex  sgi.tex  tao.tex
show-and-tell/: index.html  main.pjs  package.json  webpack.config.js
show-and-tell/example/: Splash.js  index.js
show-and-tell/src.old/: Back.js  Camera.js  ElasticEaseOut.js  EnterLeft.js  Line.js  SVG.js  Text.js  Ticker.js  Timeline.js  Timepoint.js  Tween.js  nodes.js  tweens.js
socket.io/: socket.io.js
tao/: priorities_2014.tex
(+106 files in other folders)
